--- a/NBD_ASP_Projekt/Views/Home/Index.cshtml
+++ b/NBD_ASP_Projekt/Views/Home/Index.cshtml
@@ -1,8 +1,37 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model NBD_ASP_Projekt.Models.ViewModels.ComputerList
+@{
+	ViewData["Title"] = "Computers";
+	Layout = "~/Views/Shared?_layout.cshtml";
+}
+<h2>Computer List</h2>
+@using (Html.BeginForm())
+{
+	<label for="ComputerName">Search by computer name</label>
+	<input type="text" name="ComputerName" value="@Model.Filter.ComputerName" />
+	<label for="Year">Search by year</label>
+	<input type="text" name="year" value="@Model.Filter.Year" />
+	<input type="submit" value="Search" />
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<p>
+	@Html.ActionLink("Add","Create")
+</p>
+<table class="table">
+	<tr>
+		<th>Model</th>
+		<th>Year</th>
+		<th></th>
+	</tr>
+	@foreach (var computer in Model.Computers)
+	{
+		<tr>
+			<td>@Html.DisplayFor(modelItem => computer.Name)</td>
+			<td>@Html.DisplayFor(modelItem => computer.Year)</td>
+			<td>
+				@Html.ActionLink("Change","Edit",new {id=computer.Id})|
+				@Html.ActionLink("Delete","Delete",new {id=computer.Id})|
+				@Html.ActionLink("Addmimage","AttachImage",new {id=computer.Id})
+			</td>
+		</tr>
+	}
+</table>
