--- a/NBD_ASP_Projekt/Views/Home/Index.cshtml
+++ b/NBD_ASP_Projekt/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model NBD_ASP_Projekt.Models.ViewModels.ComputerList
 @{
 	ViewData["Title"] = "Computers";
-	Layout = "~/Views/Shared?_layout.cshtml";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Computer List</h2>
 @using (Html.BeginForm())
