--- a/NBD_ASP_Projekt/Views/Home/Index.cshtml
+++ b/NBD_ASP_Projekt/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 	<tr>
 		<th>Model</th>
 		<th>Year</th>
-		<th></th>
+		<th>Option</th>
 	</tr>
 	@foreach (var computer in Model.Computers)
 	{
@@ -30,7 +30,7 @@
 			<td>
 				@Html.ActionLink("Change","Edit",new {id=computer.Id})|
 				@Html.ActionLink("Delete","Delete",new {id=computer.Id})|
-				@Html.ActionLink("Addmimage","AttachImage",new {id=computer.Id})
+				@Html.ActionLink("Add image","AttachImage",new {id=computer.Id})
 			</td>
 		</tr>
 	}
