--- a/NBD_ASP_Projekt/Views/Home/Edit.cshtml
+++ b/NBD_ASP_Projekt/Views/Home/Edit.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Edit";
 }
 
-@model Lab8.Models.Computers
+@model NBD_ASP_Projekt.Models.Models.Computers
 
 <h2>Edytuj</h2>
 
