--- a/NBD_ASP_Projekt/Views/Home/AttachImage.cshtml
+++ b/NBD_ASP_Projekt/Views/Home/AttachImage.cshtml
@@ -16,5 +16,5 @@
 	<div class="form-group">
 		<input type="submit" value="Dodaj zdjęcie" class="btn btn-primary" />
 	</div>
-	<asp:I
+	<img src="~/Home/GetImage/@Model.ImageId" asp-append-version="true">
 </form>
